# AutoPromptTuning

./: .gitignore  run_generation_pipeline.py  run_pipeline.py
.github/workflows/: ci.yml  release.yml
config/: config_default.yml
config/config_diff/: config_generation.yml
prompt_tuning_framework/: BaoCao_Prompt_Tuning_Framework.pptx  BaoCao_Prompt_Tuning_Framework_v2.pptx  DO_LUONG.md  EXTENDING.md  HOI_DAP.md  MEASUREMENT.md  Q&A.md  README.md  RESULTS.md  USAGE.md  __init__.py  cli.py  config.py  data.py  llm.py  pyproject.toml
prompt_tuning_framework/components/: __init__.py
prompt_tuning_framework/components/evaluators/: __init__.py  accuracy_evaluator.py  composite_evaluator.py  cross_model_evaluator.py
prompt_tuning_framework/components/executors/: __init__.py  llm_executor.py  multi_model_executor.py
prompt_tuning_framework/components/optimizers/: __init__.py  autoprompt_optimizer.py  llm_rewrite_optimizer.py
prompt_tuning_framework/components/stores/: __init__.py  memory_store.py  sqlite_store.py
prompt_tuning_framework/core/: __init__.py  interfaces.py  registry.py  stats.py  tuner.py  types.py
prompt_tuning_framework/examples/: config_example.yml  custom_components.py  hard_example.py  make_pii.py  make_tickets.py  pii.csv  pii_example.py  quickstart.py  tickets.csv  tickets_test.csv  tickets_train.csv
prompt_tuning_framework/tests/: conftest.py  test_autoprompt_optimizer.py  test_bo_mau.py  test_cli.py  test_data_and_config.py  test_dataset.py  test_do_luong.py  test_do_luong_dung_khong.py  test_do_tin_cay_diem.py  test_evaluator.py  test_guards.py  test_llm.py  test_metrics.py  test_metrics_verification.py  test_pii_dataset.py  test_registry.py  test_score_reliability.py  test_stores.py  test_tach_tap_test.py  test_train_test_split.py  test_tuner.py
prompt_tuning_framework/ui/: __init__.py  streamlit_app.py
utils/: config.py  llm_chain.py
